xterm (319-1) UNRELEASED; urgency=low

  * New upstream release.
    - Correct combination of -ls and -e options for utempter configuration
      (Closes: #794201).

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 20 Aug 2015 19:58:41 +0200

xterm (318-2) unstable; urgency=low

  * Upload to unstable.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 26 Apr 2015 15:32:00 +0200

xterm (318-1) experimental; urgency=low

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 15 Apr 2015 17:33:16 +0200

xterm (317-1) experimental; urgency=low

  * New upstream release.
    - Adapt example for exec-formatted from Lukáš Zapletal's webpage
      to manual (Closes: #780008).
    - Add a short usage section to the xterm manual, including notes
      on setting the window title (Closes: #742477).

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 31 Mar 2015 17:50:42 +0200

xterm (316-1) experimental; urgency=low

  * New upstream release.
    - Add configure option --enable-initial-erase to set ptyInitialErase
      consistently with manpage, as well as adding a table in manpage to
      clarify the relationship between the resources related to the
      backarrow key (Closes: #775952).
  * Refresh Debian patches.
  * Update years in debian/copyright.
  * Update copy of XTerm FAQ to revision 1.293 (dated 2015/02/16).

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 08 Mar 2015 19:17:29 +0100

xterm (314-1) experimental; urgency=low

  * New upstream release.
  * Update copy of XTerm FAQ to revision 1.289 (dated 2014/12/19).

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 30 Dec 2014 18:25:43 +0100

xterm (313-1) experimental; urgency=low

  * New upstream release.
  * Refresh Debian patches.
  * Bump Standards-Version to 3.9.6, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 04 Dec 2014 18:51:09 +0100

xterm (312-2) unstable; urgency=medium

  * Cherry-pick a patch from xterm 314: change passedPty[] to an
    allocated string to ensure it is long enough for the -S option