@@ -3,6 +3,7 @@ xterm (319-1) UNRELEASED; urgency=low
   * New upstream release.
     - Correct combination of -ls and -e options for utempter configuration
       (Closes: #794201).
+  * Update copy of XTerm FAQ to revision 1.305 (dated 2015/05/01).
 
  -- Sven Joachim <svenjoac@gmx.de>  Thu, 20 Aug 2015 19:58:41 +0200
 
